Change text alignment, corrected the title and the author

--- a/style.css
+++ b/style.css
@@ -6,11 +6,27 @@ h1
     color: rgb(138, 15, 6);
 }
 
-p{
+.song-title p
+{
+    font-style: italic;
+    font-weight: 100;
+    font-size: 11pt;
+    margin: 2px;
+}
+
+.song-title h1
+{
+    margin: 2px;
+}
+
+.text-container p
+{
     display: inline-block;
-    text-align: center;
+    text-align: left;
     color: rgb(138, 15, 6);
     max-width: 300px;
+    font-size: 10pt;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 section
